--- a/src/css/header.css
+++ b/src/css/header.css
@@ -147,7 +147,7 @@
   }
 
   .mobile-order-button {
-    margin-top: 289px;
+    margin-top: auto;
     border: none;
     border-radius: 60px;
     padding: 14px 31px;
