--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -23,7 +23,10 @@
           placeholder="clients@gmail.com"
           required
         />
-        <div id="emailValidationMessage"></div>
+        <div
+          id="emailValidationMessage"
+          class="hidden-container-for-footer"
+        ></div>
       </div>
       <textarea
         id="comment"
