--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -1,3 +1,7 @@
+.projects-section {
+  padding-top: 32px;
+  padding-bottom: 17px;
+}
 .projects-title {
   font-weight: 600;
   font-size: 16px;
@@ -73,6 +77,7 @@
   align-items: center;
   gap: 12px;
   margin-top: 32px;
+  padding-bottom: 15px;
 }
 .scroll-button {
   border: 1px solid rgba(250, 250, 250, 0.2);
@@ -147,6 +152,10 @@
 }
 /* -------------------------------TABLET */
 @media screen and (min-width: 768px) {
+  .projects-section {
+    padding-top: 48px;
+    padding-bottom: 33px;
+  }
   .first-block {
     padding: 64px 146px 64px 64px;
   }
@@ -171,6 +180,10 @@
 }
 /* --------------------Desktop */
 @media screen and (min-width: 1440px) {
+  .projects-section {
+    padding-top: 88px;
+    padding-bottom: 67px;
+  }
   .block-box {
     display: flex;
   }
