--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -135,11 +135,13 @@
           <h3 class="title-skills-about">Git</h3>
         </li>
       </ul>
-      <button type="button" class="btn-arrow" id="arrow">
-        <svg class="arrow-skills">
-          <use href="./img/icons.svg#icon-arrow"></use>
-        </svg>
-      </button>
+      <div class="btn-arrow-container">
+        <button type="button" class="btn-arrow" id="arrow">
+          <svg class="arrow-skills">
+            <use href="./img/icons.svg#icon-arrow"></use>
+          </svg>
+        </button>
+      </div>
     </div>
   </div>
 </section>
