--- a/src/css/about.css
+++ b/src/css/about.css
@@ -223,6 +223,11 @@
   color: #E0373F;
 }
 
+.arrow-skills:hover,
+.arrow-skills:focus {
+  stroke: #E0373F;
+}
+
 @media screen and (min-width: 375px) and (max-width: 767px) {
 
   .about {
@@ -320,7 +325,7 @@
 
   .list-skills-about .item-skills-about {
     height: 200px;
-    margin: 88px auto;
+    padding: 88px auto;
   }
 }
 
@@ -403,8 +408,7 @@
   .list-skills-about .item-skills-about {
     width: 200px;
     height: 200px;
-    margin: 88px auto;
-    padding: 88px 52px;
+    padding: 88px auto;
   }
 
   .title-skills-about {
@@ -419,11 +423,6 @@
   .arrow-skills {
     width: 40px;
     height: 40px;
-  }
-
-  .arrow-skills:hover,
-  .arrow-skills:focus {
-    stroke: #E0373F;
   }
 
   .swiper-about .swiper-wrapper {
