--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -28,13 +28,13 @@
           class="hidden-container-for-footer"
         ></div>
       </div>
-      <textarea
-        id="comment"
-        name="comment"
-        placeholder="comments"
-        required
-      ></textarea>
-
+      <div class="validateComment">
+        <textarea id="comment" name="comment" placeholder="comments"></textarea>
+        <div
+          id="CommentValidationMessage"
+          class="hidden-container-for-footer"
+        ></div>
+      </div>
       <button type="submit" id="submit-btn">Send</button>
     </form>
 
