--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -21,6 +21,7 @@
           name="email"
           pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
           placeholder="clients@gmail.com"
+          autocomplete="off"
           required
         />
         <div
