--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -83,6 +83,14 @@
   animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+#email:-webkit-autofill,
+#email:-webkit-autofill:hover,
+#email:-webkit-autofill:focus,
+#email:-webkit-autofill:active {
+  transition: background-color 5000s;
+  -webkit-text-fill-color: #fafafa !important;
+}
+
 #email:hover,
 #email:focus {
   border-bottom: 1px solid rgba(250, 250, 250, 0.5);
