--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -89,7 +89,7 @@
   align-items: center;
   stroke: #fafafa;
   cursor: pointer;
-  transition: stroke 1s, fill 1s, border 1s, box-shadow 1s;
+  transition: stroke 1s, border 1s;
 }
 .scroll-button:hover {
   border: 1px solid #e0373f;
